--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load staticfiles %}
+
 <html lang="en">
 
 <head>
@@ -7,12 +9,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://bootswatch.com/3/sandstone/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-
-  <title>Dajango App</title>
+<link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" />
+  <title>Bookywook Dajngo</title>
 </head>
 
 <body>
-  <h1>Our Django App</h1>
+  
 
   <!-- Fixed masthead -->
   <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
@@ -24,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-        <a class="navbar-brand" href="/">Booky</a>
+        <a class="navbar-brand" href="/">Bookywook</a>
       </div>
 
       <div id="navbar" class="navbar-collapse collapse">
@@ -33,6 +35,7 @@
         
           <li><a href="{% url 'profile' %}"><i class="fa fa-user"></i> Profile</a></li>
           <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Logout</a></li>
+          <li><a href="{% url 'add_book' %}"><i class="fa fa-plus"></i> Add Book</a></li>
           {% else %}
           <li><a href="{% url 'register' %}"><i class="fa fa-user-plus"></i> Register</a></li>
           <li><a href="{% url 'login' %}"><i class="fa fa-sign-in"></i> Login</a></li>
@@ -47,11 +50,7 @@
     </div>
   </div>
 
-  <div class="container">
-    <div class="row">
-      <p> Copyright 2018 Better Than Flask Ltd.</p>
-    </div>
-  </div>
+  
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 
